--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,8 +1,7 @@
 <h1>Tasks</h1>
 
 <% @tasks.each do |task| %>
-
-  <h2><%= task.title %></h2>
+  <h2><%= link_to task.title, task_path(task) %></h2>
   <p><%= task.details %></p>
   <p><%= task.completed ? 'completed' : 'not done yet' %></p>
 <% end %>
