added new and create actions to add a new task from the view

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,3 +5,5 @@
   <p><%= task.details %></p>
   <p><%= task.completed ? 'completed' : 'not done yet' %></p>
 <% end %>
+
+<%= link_to "Add a task", tasks_new_path %>
