--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,4 +6,4 @@
   <p><%= task.completed ? 'completed' : 'not done yet' %></p>
 <% end %>
 
-<%= link_to "Add a task", tasks_new_path %>
+<%= link_to "Add a task", new_task_path %>
