--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @task.title %></h1>
 <p><%= @task.details %></p>
 
+<%= link_to 'Edit task', edit_task_path(@task) %>
 <%= link_to 'tasks', root_path %>
