--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -10,11 +10,13 @@
     <%= f.text_field :details, class: 'form-control' %>
   </div>
 
-  <div class="checkbox">
-    <label>
-      <%= f.check_box :completed %> Completed
-    </label>
-  </div>
+  <% unless f.object.new_record? %>
+    <div class="checkbox">
+      <label>
+        <%= f.check_box :completed %> Completed
+      </label>
+    </div>
+  <% end %>
 
   <%= f.submit class: 'btn btn-primary' %>
 <% end %>
