--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -4,3 +4,7 @@
 
 <%= link_to 'Edit task', edit_task_path(@task) %>
 <%= link_to 'tasks', root_path %>
+
+<%= link_to "Delete", task_path(@task),
+      method: :delete,
+      data: { confirm: "Are you sure?" } %>
