--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,1 +1,8 @@
+<h1>Edit task</h1>
+
 <%= render 'form', task: @task %>
+
+<hr>
+<%= link_to root_path do %>
+  <i class="fa fa-history"></i> Back to tasks
+<% end %>
