--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,10 +1,18 @@
 <h1><%= @task.title %></h1>
-<p><%= @task.details %></p>
-<p><%= @task.completed %></p>
 
-<%= link_to 'Edit task', edit_task_path(@task) %>
-<%= link_to 'tasks', root_path %>
+<p class="well"><%= @task.details %></p>
 
-<%= link_to "Delete", task_path(@task),
-      method: :delete,
-      data: { confirm: "Are you sure?" } %>
+<% if @task.completed %>
+  <i class="fa fa-check-square-o"></i> This task is completed
+<% else %>
+  <i class="fa fa-square-o"></i> This task is not completed yet
+<% end %>
+
+<%= link_to edit_task_path(@task.id), class: 'pull-right btn btn-default' do %>
+  <i class="fa fa-pencil"></i> Edit this task
+<% end %>
+
+<hr>
+<%= link_to tasks_path do %>
+  <i class="fa fa-history"></i> Back to list
+<% end %>
